--- a/index.html
+++ b/index.html
@@ -23,14 +23,49 @@
                 <h4>Hi, I am</h4>
                 <h1>Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary"><span><i class="fa-solid fa-download"></i></span>Download CV</button>
+                <button class="btn-primary hardy-btn"><span><i class="fa-solid fa-download"></i></span>Download CV</button>
                 <button class="btn-primary"><span><i class="fa-solid fa-phone"></i></span>Contact</button>
             </div>
-                <img class="hero-profile-pic" src="images/hardy.png" alt="">
+            <img class="hero-profile-pic" src="images/hardy.png" alt="">
         </div>
     </header>
     <main>
+        <!-- About -->
+        <section class="about-section">
+            <div class="about-section-container">
+                <h1>About Me</h1>
+            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata</p>
+            <div class="hardy-table">
+                <div>
+                    <h4>Name:</h4>
+                    <p>Mary Hardy</p>
+                </div>
+                <div>
+                    <h4>Email:</h4>
+                    <p>info@gmail.comy</p>
+                </div>
+                <div>
+                    <h4>Date of Birth:</h4>
+                    <p>01/01/2025</p>
+                </div>
+                <div>
+                    <h4>From:</h4>
+                    <p>The Borderless Ground</p>
+                </div>
+            </div>
+            </div>
+        </section>
 
+        <!-- What I do -->
+         <section class="what-i-do">
+            <div>
+                <h1>What I Do</h1>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="cards">
+
+            </div>
+         </section>
     </main>
     <footer>
 
