--- a/index.html
+++ b/index.html
@@ -86,9 +86,68 @@
                 </div>
             </div>
          </section>
+
+         <!-- A Summary Of My Resume -->
+          <section class="resume-section">
+            <h1>A Summary of My Resume</h1>
+            <div class="experiences-container">
+                <div class="column1">
+                    <h2>My Education</h2>
+                    <div>
+                        <h3>Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3>Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3>Master in Computer Engineering</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="column2">
+                    <h2>My Experience</h2>
+                    <div>
+                        <h3>Sr. Front End Developer</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3>Jr. Front End Developer</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h3>HTML Developer</h3>
+                        <h4>Harvard University / 2015 - 2017</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="cv-download-div">
+                <button class="btn-primary hardy-btn"><span><i class="fa-solid fa-download"></i></span>Download CV</button>
+            </div>
+          </section>
+
     </main>
     <footer>
+        <div class="footer-container">
+            <div>
+                <h1>Let's Connect</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus excepturi itaque ullam ab incidunt totam ipsum dolorem quidem ipsam?</p>
+            </div>
+            <div>
 
+            </div>
+        </div>
     </footer>
 </body>
 </html>
