Resume summary and Footer have been added. Leaving this as a completed repo

--- a/index.html
+++ b/index.html
@@ -140,14 +140,27 @@
     </main>
     <footer>
         <div class="footer-container">
-            <div>
+            <div class="connection-div">
                 <h1>Let's Connect</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia minus excepturi itaque ullam ab incidunt totam ipsum dolorem quidem ipsam?</p>
+                <div class="social-media">
+                    <span><i class="fa-brands fa-facebook"></i></span>
+                    <span><i class="fa-brands fa-x-twitter"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                </div>
             </div>
-            <div>
-
+            <div class="contact-container">
+                <h1>Message Me</h1>
+                <form action="">
+                    <input type="text" name="full name" placeholder="Your name">
+                    <input type="email" name="email" placeholder="Your email">
+                    <textarea name="msg" id="msg" cols="20" rows="5" placeholder="Message"></textarea>
+                    <button type="submit" class="btn-primary"> Submit </button>
+                </form>
             </div>
+            
         </div>
+        <p style="text-align: center; padding: 10px 0;"><small>This site has been completed. &copy; 2025</small></p>
     </footer>
 </body>
 </html>
